# tork-governance

./: .gitignore  .replit  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish.yml
attached_assets/: Pasted-Create-LangChain-middleware-integration-in-src-tork-ada_1766646278919.txt  Pasted-Create-a-CrewAI-integration-adapter-for-Tork-Governance_1766730035537.txt  Pasted-Create-a-Custom-Agents-Personas-system-for-Tork-Governa_1766824657557.txt  Pasted-Create-a-Debate-Consensus-system-for-Tork-Governance-SD_1766786019459.txt  Pasted-Create-a-Microsoft-AutoGen-integration-adapter-for-Tork_1766730456134.txt  Pasted-Create-a-Policy-Playground-API-and-interactive-web-UI-i_1766711881029.txt  Pasted-Create-a-comprehensive-PII-Personally-Identifiable-Info_1766478004694.txt  Pasted-Create-an-ACL-Agent-Communication-Language-message-sche_1766787039861.txt  Pasted-Create-an-ACL-Agent-Communication-Language-message-sche_1766824357391.txt  Pasted-Create-an-Agent-Capability-Labels-system-for-Tork-Gover_1766825723331.txt  Pasted-Create-an-Agent-Chaining-Workflow-system-for-Tork-Gover_1766784665065.txt  Pasted-Create-an-Agent-Selectable-Prompts-system-for-Tork-Gove_1766826392923.txt  Pasted-Create-an-OpenAI-Agents-SDK-integration-adapter-for-Tor_1766781224656.txt  Pasted-Enhance-the-CLI-scanner-src-tork-cli-scanner-py-to-add-_1766478724215.txt  Pasted-Update-the-MkDocs-documentation-site-to-include-all-new_1766828241245.txt
cli/: __init__.py
docs/: acl.md  api-reference.md  api.md  capabilities.md  consensus.md  examples.md  getting-started.md  index.md  integrations.md  personas.md  prompts.md  quickstart.md  routing.md  workflows.md
site/: 404.html  index.html  sitemap.xml
site/acl/: index.html
site/api/: index.html
site/api-reference/: index.html
site/capabilities/: index.html
site/consensus/: index.html
site/examples/: index.html
site/getting-started/: index.html
site/integrations/: index.html
site/personas/: index.html
site/prompts/: index.html
site/quickstart/: index.html
site/routing/: index.html
site/search/: search_index.json
site/workflows/: index.html
src/tork/: __init__.py
src/tork/acl/: __init__.py  builder.py  models.py  protocols.py  router.py
src/tork/adapters/: __init__.py  base.py
src/tork/api/: __init__.py  app.py  playground.py
src/tork/capabilities/: __init__.py  defaults.py  matcher.py  models.py  registry.py
src/tork/cli/: scanner.py
src/tork/compliance/: __init__.py  receipts.py  store.py  validator.py
src/tork/consensus/: __init__.py  engine.py  models.py  strategies.py  templates.py
src/tork/core/: __init__.py  engine.py  models.py  policy.py  redactor.py
src/tork/identity/: __init__.py  exceptions.py  jwt_handler.py  manager.py
src/tork/personas/: __init__.py  builder.py  models.py  runtime.py  store.py  templates.py
src/tork/prompts/: __init__.py  generator.py  models.py  orchestrator.py  selector.py  templates.py
src/tork/routing/: __init__.py  defaults.py  (+3 more)
templates/policies/: README.md  api-security.yaml  compliance-hipaa.yaml  content-moderation.yaml  default.yaml  pii-protection.yaml
test_scan/: mcp.config.json
tests/: __init__.py  conftest.py  test_acl.py  test_autogen.py  test_capabilities.py  test_compliance.py  test_consensus.py  test_crewai.py  test_engine.py  test_engine_redactor_integration.py  test_http_proxy.py  test_identity.py  test_langchain.py  test_openai_agents.py  test_package.py  test_personas.py  test_playground.py  test_policies.py  test_prompts.py  test_redactor.py  test_routing.py  test_scanner.py  test_workflows.py
(+29 files in other folders)
