[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tork-governance"
version = "0.3.0"
description = "A universal governance SDK for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tork Team", email = "team@tork.network"}
]
keywords = ["ai", "governance", "security", "mcp", "langchain", "pii", "compliance", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=23.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "uvicorn>=0.23.0",
    "PyJWT>=2.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://tork.network"
Documentation = "https://github.com/torkjacobs/tork-governance#readme"
Repository = "https://github.com/torkjacobs/tork-governance"
Issues = "https://github.com/torkjacobs/tork-governance/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
langchain = [
    "langchain>=0.1.0",
]

[project.scripts]
tork = "tork.cli.scanner:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
tork = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
